fix metamask modal on small screens

--- a/material-overrides/assets/stylesheets/moonbeam.css
+++ b/material-overrides/assets/stylesheets/moonbeam.css
@@ -801,6 +801,7 @@ li>nav.md-nav[data-md-level="4"] {
   display: flex;
   justify-content: center;
   margin: 0.5em 0.2em;
+  max-width: 100%;
 }
 
 /* Modal Styling */
